--- a/Nosotros.html
+++ b/Nosotros.html
@@ -16,6 +16,27 @@
       </nav>
       <main>
         <h1>Nosotros</h1>
+        <br />
+        <section>
+          <h2>
+            La H2 es semejante a la Etiqueta H1, o Título. Esta etiqueta es
+            utilizada para los subtítulos y permite separar el contenido, además
+            ofrecer más información a Google.
+          </h2>
+        </section>
+
+        <br />
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only
+          five centuries, but also the leap into electronic typesetting,
+          remaining essentially unchanged. It was popularised in the 1960s with
+          the release of Letraset sheets containing Lorem Ipsum passages, and
+          more recently with desktop publishing software like Aldus PageMaker
+          including versions of Lorem Ipsum.
+        </p>
       </main>
     </header>
   </body>
