--- a/Contacto.html
+++ b/Contacto.html
@@ -22,7 +22,8 @@
           <ul>
             <li><p>nombre</p></li>
 
-            <form action="index.html" method="get" novalidate>
+          <div>
+            <form action="index.html" method="get" enctype="multipart/form-data">
               <input
                 type="text"
                 name="nombre"
@@ -32,7 +33,10 @@
                 pattern="^[0-9]*$"
                 required
               />
-              <input
+          </div>
+            
+          <div>
+            <input
                 type="number"
                 name="Numero"
                 step="0.5"
@@ -41,6 +45,8 @@
                 required
                 id="number"
               />
+          </div>
+              
               <input type="color" name="color" />
               <div>
                 <input type="checkbox" id="html" />
@@ -56,6 +62,28 @@
               </div>
 
               <button>Enviar</button>
+              <div>
+                <label for="ciudades">Ciudades</label>
+                <select name="ciudad" id="ciudad">
+                  <option value="bucaramanga">bucaramanga</option>
+                  <option value="cartagena">cartagena</option>
+                  <option value="cali">cali</option>
+                  <option value="Medellin">Medellin</option>
+                </select>
+              </div>
+<div>
+<br>
+<br>
+<imput type="date"></imput>
+<br>
+<br>
+</div>
+
+
+              <div>
+                <imput type="file" name="file" id="file"></imput>
+              </div>
+
             </form>
           </ul>
         </section>
