--- a/Nosotros.html
+++ b/Nosotros.html
@@ -25,6 +25,12 @@
           </h2>
         </section>
 
+        <video
+          src="Videos/202749-918944227_tiny.mp4"
+          controls
+          poster="imagenes/servicio3.jpg"
+        ></video>
+
         <br />
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -37,6 +43,16 @@
           more recently with desktop publishing software like Aldus PageMaker
           including versions of Lorem Ipsum.
         </p>
+        <br />
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.3874798518095!2d-73.16704399999999!3d7.0809979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e683e89d74cb11f%3A0x7d5e0f990533da24!2sCentro%20Industrial%20de%20Mantenimiento%20Integral%20CIMI%20-%20SENA%20Servicio%20Nacional%20de%20Aprendizaje!5e0!3m2!1ses-419!2sco!4v1725143748543!5m2!1ses-419!2sco"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </main>
     </header>
   </body>
